--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require": {
         "guzzlehttp/guzzle": "^6.3",
         "mockery/mockery": "^1.1",
-        "phpunit/phpunit": "~5"
+        "phpunit/phpunit": "~5 || ~7"
     },
     "extra": {
         "laravel": {
