--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
     },
     "require": {
         "guzzlehttp/guzzle": "^6.3",
-        "mockery/mockery": "^1.1",
+        "mockery/mockery": "^1.1"
+    },
+    "require-dev": {
         "phpunit/phpunit": "~5 || ~7"
     },
     "extra": {
