--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,11 @@
         }
     },
     "require": {
-        "guzzlehttp/guzzle": "^6.3",
-        "mockery/mockery": "^1.1",
-        "phpunit/phpunit": "~5 || ~7"
+        "guzzlehttp/guzzle": "^6.3"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~5 || ~7",
+        "mockery/mockery": "^1.1"
     },
     "extra": {
         "laravel": {
